[tool.poetry]
name = "wing"
version = "0.1.0"
description = "Creation of wing geometry"
authors = ["Baptiste LABAT <baptiste.labat@syro.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geomdl = "^5.3.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
