[tool.poetry]
name = "wing"
version = "0.1.0"
description = "Creation of wing geometry"
authors = ["Baptiste LABAT <baptiste.labat@syro.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geomdl = "^5.3.1"
plotly = "^5.24.1"
pymead = "^2.0.0b11"
airfoils = "^0.2.2"
pyairpar = "^1.1.1"
aerosandbox = "^4.2.6"
foillib = "^0.0.1"
pyfoil = "^0.1.8"
aeropy = "^0.2"
pynurbs = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
